--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dev_dependencies:
   convex_bottom_bar: ^3.2.0
   auto_animated: ^3.2.0
   rflutter_alert: ^2.0.7
+  webview_flutter: ^4.10.0
 
 flutter:
   uses-material-design: true
