--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dev_dependencies:
   auto_animated: ^3.2.0
   rflutter_alert: ^2.0.7
   webview_flutter: ^4.10.0
+  flutter_card_swiper: ^7.0.2
 
 flutter:
   uses-material-design: true
