--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
   animated_text_kit: ^4.2.2
   in_app_review: ^2.0.10
   cupertino_icons: ^1.0.8
+  social_media_buttons: ^1.0.0
 
 flutter:
   uses-material-design: true
